--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,17 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.evitalz.homevitalz.cardfit">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="com.google.android.things.permission.USE_PERIPHERAL_IO" />
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,10 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Spo2PulseRate">
-        <activity android:name=".ui.activities.login.RecoverPasswordActivity">
-
-        </activity>
-
+        <activity android:name=".ui.activities.spo2.ConnectSpo2Activity"></activity>
+        <activity android:name=".ui.activities.login.RecoverPasswordActivity"></activity>
         <activity android:name=".RfTestActivity" />
         <activity
             android:name=".ui.activities.userinfo.AddNewPatientActivity"
@@ -35,8 +22,6 @@
             android:name=".EditUserInfo"
             android:label="Edit Patient Details"
             android:theme="@style/Theme.Spo2PulseRateActionbar" />
-
-
         <activity
             android:name=".ui.activities.connect_device.ViewPdfActivity"
             android:label="View PDF"
@@ -72,7 +57,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.activities.connect_device.SearchDeviceActivity"
             android:theme="@style/Theme.Spo2PulseRate" />
@@ -114,5 +98,16 @@
                 android:resource="@xml/fileprovider" />
         </provider>
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.things.permission.USE_PERIPHERAL_IO" />
+
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
 </manifest>
